# newbie-image-generator

./: .gitignore  README.md  README_EN.md  dev.bat  download_models.bat  native.json  start.bat
backend/: .env.example  Cargo.toml  README.md
backend/src/: api.rs  comfyui.rs  config.rs  error.rs  main.rs  models.rs
frontend/: README.md  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: GeneratedImages.tsx  ImageGenerator.tsx  StructuredPrompt.tsx  ThemeToggle.tsx  XMLImport.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts  config.ts  types.ts
models/clip/: .gitkeep
models/unet/: .gitkeep
models/vae/: .gitkeep
