[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-tungstenite = "0.21"
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for ComfyUI
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# Middleware and utilities
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
dotenvy = "0.15"

# UUID for client identification
uuid = { version = "1", features = ["v4", "serde"] }

# Error handling
thiserror = "1"
anyhow = "1"

# Base64 encoding for images
base64 = "0.21"
